# dls_course_sem1_project

./: README.md  pyproject.toml
notebooks/: test.ipynb  train.ipynb
src/: create_gif.py  generator.py  gradio_server.py
