[project]
name = "dls-course-sem1-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip>=0.2.0",
    "gdown>=5.2.1",
    "gradio>=6.5.1",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "notebook>=7.5.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
